<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/next_turn"
            android:layout_width="128dp"
            android:layout_height="67dp"
            android:id="@+id/nextTurnButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:background="@android:color/holo_blue_bright"
            app:layout_constraintTop_toTopOf="@+id/rollButton"
            app:layout_constraintBottom_toBottomOf="@+id/rollButton" android:visibility="invisible"
            android:clickable="false"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/yahtzeeButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/sixesButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/sixesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/chanceButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/sixesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/threeOfAKindButton" app:layout_constraintTop_toTopOf="@+id/onesButton"
            app:layout_constraintBottom_toBottomOf="@+id/onesButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/largeStraightButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintTop_toTopOf="@+id/fivesButton"
            app:layout_constraintBottom_toBottomOf="@+id/fivesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/fourOfAKindButton"
            app:layout_constraintTop_toTopOf="@+id/twosButton" app:layout_constraintBottom_toBottomOf="@+id/twosButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/fullHouseButton"
            app:layout_constraintTop_toTopOf="@+id/threesButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/threesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/smallStraightButton"
            app:layout_constraintTop_toTopOf="@+id/foursButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="70dp" android:layout_marginRight="70dp"
            app:layout_constraintBottom_toBottomOf="@+id/foursButton"/>
    <Button
            android:text="@string/dice_3"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="172dp"
            android:layout_marginStart="172dp" android:id="@+id/dice3Button" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/rollButton"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="172dp"
            android:layout_marginRight="172dp" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/dice_2"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/dice2Button"
            app:layout_constraintEnd_toStartOf="@+id/dice3Button" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/dice1Button"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/rollButton" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/roll_1"
            android:layout_width="0dp"
            android:layout_height="67dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" android:id="@+id/rollButton" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            tools:text="ROLL" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/dice_1"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/dice1Button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/rollButton" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/dice_5"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:id="@+id/dice5Button"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/rollButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:background="@color/colorWhite"/>
    <Button
            android:text="@string/dice_4"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/dice4Button"
            app:layout_constraintStart_toEndOf="@+id/dice3Button"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/rollButton" app:layout_constraintEnd_toStartOf="@+id/dice5Button"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:background="@color/colorWhite"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/onesButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp" android:layout_marginStart="50dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/twosButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/onesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/threesButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/twosButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/foursButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/threesButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/fivesButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/foursButton"/>
    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/sixesButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/fivesButton"/>
    <TextView
            android:text="1'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/onesButton"
            app:layout_constraintBottom_toBottomOf="@+id/onesButton" android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/onesButton" android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"/>
    <TextView
            android:text="2'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="@+id/textView"
            android:id="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/twosButton"
            app:layout_constraintBottom_toBottomOf="@+id/twosButton"
            app:layout_constraintEnd_toEndOf="@+id/textView"
    />
    <TextView
            android:text="3'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/threesButton"
            app:layout_constraintBottom_toBottomOf="@+id/threesButton"/>
    <TextView
            android:text="5'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/fivesButton"
            app:layout_constraintBottom_toBottomOf="@+id/fivesButton"/>
    <TextView
            android:text="6'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/sixesButton" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="@+id/sixesButton"/>
    <TextView
            android:text="4'S"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/foursButton"
            app:layout_constraintBottom_toBottomOf="@+id/foursButton"
    />
    <Button
            android:text="PLAY"
            android:layout_width="128dp"
            android:layout_height="67dp"
            android:id="@+id/playButton"
            app:layout_constraintTop_toTopOf="@+id/rollButton"
            app:layout_constraintBottom_toBottomOf="@+id/rollButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:background="@color/colorPrimary"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/upperScoreTextView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/sixesButton"
            app:layout_constraintStart_toStartOf="@+id/sixesButton"
    />

</android.support.constraint.ConstraintLayout>